Bug fixed in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                   <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent2">
                     <ul id="nav2" class="navbar-nav ml-auto">
-                      
+
                     </ul>
                     <a href="mailto: jguillermo.dev@gmail.com" class="button radius-10 d-none d-lg-flex">Contacto</a>
                   </div>
@@ -110,7 +110,7 @@
                   <label for="message">Mensaje:</label>
                   <textarea id="message" class="form-control" name="message"></textarea>
                 </div>
-                <button id="my-form-button btn-block" class="btn btn-primary mt-2" type="submit">Enviar</button>
+                <button id="my-form-button" class="btn btn-primary mt-2 btb-block" type="submit">Enviar</button>
                 <p id="my-form-status"></p>
               </form>
              </div>
